<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">黔商通</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="userlogin">用户登录</string>
    <string name="saveuserconfig">记住登录信息</string>
    <string name="account">帐号</string>
    <string name="password">密码</string>
    <string name="username">姓  名</string>
    <string name="sex">性   别</string>
    <string name="address">地  址</string>
    <string name="phone">电话</string>
    <string name="msgcount">剩余条数</string>
    <string name="money">余额</string>
    <string name="pay">充值</string>
    <string name="clear">清空</string>
    <string name="msgcontent">信息内容</string>
    <string name="submit">提交</string>
    <string name="register_btn">进入</string>
    <string name="sex_man">男</string>
    <string name="sex_woman">女</string>
    <string name="confirm_install_hint">"安装提示"</string>
    <string name="confirm_install">"为保证您的交易安全，需要您安装移动快捷支付，才能进行付款。\n\n点击确定，立即安装。"</string>
    <string name="check_sign_failed">您的订单信息已被非法篡改。</string>
    <string name="remote_call_failed">Failure calling remote service</string>
    <string name="cmd">操作</string>
    <string name="runtime">发送时间</string>
    <string name="price">价格</string>
    <string name="setmeal">套餐类型</string>
    <string name="shopselector">商铺选择:</string>
    <string name="shopaddress">商铺地址:</string>
    <string name="msgtitle">信息标题:</string>
    <string name="msgsetmeal">套餐类型:</string>
    <string name="customerlist">顾客列表:</string>
    <string name="msgstarttime">发布日期:</string>
    <string name="msgendtime">发布结束时间:</string>
    <string name="msgsendcount">发送条数:</string>
    <string name="register_phone">请输入您的电话号码:</string>
    <string name="register_pwd">请输入您的密码:</string>
    <string name="register_reppwd">重复输入密码:</string>
    <string name="register_name">请输入您的姓名:</string>
    <string name="register_sex">请选择您的性别:</string>
    <string name="register_address">请输入您的地址:</string>
    <string name="setmeal_pay">您的余额为:</string>
    <string name="setmeal_msgcount">您的剩余条数为:</string>
    <string name="register_phonehint">请输入您要注册的电话号码</string>
    <string name="register_pwdhint">请输入您的密码</string>
    <string name="register_reppwdhint">请再次输入您的密码</string>
    <string name="register_namehint">请输入您的姓名</string>
    <string name="register_addresshint">请输入您的详细地址</string>
    <string name="msgcontenthint">请输入信息的内容,最多70个字</string>
    <string name="msgsendcounthint">请输入发送的条数</string>
    <string name="msgtitlehint">请输入标题的内容</string>
    <string name="login_btn_login">登 录</string>
    <string name="login_btn_register">注册</string>
    <string name="login_image_des">图片信息</string>
    <string name="login_text_logining">努力登录中O(∩_∩)O~</string>
    <string name="register_head">注册</string>
    <string name="personalinfo_head">基本信息</string>
    <string name="shopinfo_head">商铺信息</string>
    <string name="addmsg_head">信息发布</string>
    <string name="showmsglist_head">历史信息</string>
    <string name="setmeal_head">套餐购买</string>
    <string name="payrecord_head">购买记录</string>
    <string name="pay_date">交易日期</string>
    <string name="title_activity_chose_post_mode">ChosePostModeActivity</string>
    <string name="title_activity_pust_message_mode_b">PustMessageModeBActivity</string>
    <string name="postmsg_head">短信群发</string>
    <string name="title_activity_customer_choosing">CustomerChoosingActivity</string>
    <string name="choose_customer">选择收信人</string>
    <string name="cancel">取消</string>
    <string name="complete">完成</string>
    <string name="choose_post_msg_mode">选择消息推送模式</string>
    <string name="sendmsg_by_amount">套餐</string>
    <string name="sendmsg_by_group">群发</string>
    <string name="btntext_recharge">充值</string>
    <string name="title_activity_recharge">余额充值</string>
    <string name="recharge_edittext_msg">请输入您要充值的金额</string>
    <string name="recharge_button_msg">点击按钮转到支付宝充值</string>
    <string name="title_activity_users_setmeal">剩余套餐</string>
    <string name="title_users_setmeal">您的套餐</string>
    <string name="start_date">开始日期</string>
    <string name="end_date">结束日期</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>

</resources>
