<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/qst_backmap"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="20dp"
        android:background="#FFFF760D"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/title_activity_recharge"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical" >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/qst_btn_back"
                android:contentDescription="@string/login_image_des"
                android:onClick="btn_back_onClick" />
        </RelativeLayout>
    </LinearLayout>
    
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="5dip"
        android:background="#10000000" >
    </LinearLayout>
    
    
    
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#4DFFFFFF"
            android:orientation="vertical" >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="25dp"
		        android:layout_marginRight="25dp"
                android:text="@string/recharge_edittext_msg"
                android:textSize="20sp"
                android:textColor="#FFFFFFFF" />

            <EditText
                android:id="@+id/edit_recharge_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
		        android:layout_marginRight="25dp"
                android:inputType="numberDecimal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
           		android:layout_marginLeft="50dp"
		        android:layout_marginRight="50dp"
                android:layout_marginTop="50dp"
                android:text="@string/recharge_button_msg"
                android:textSize="20sp"
                android:textColor="#FFFFFFFF" />

		    <Button 
		        
		        android:layout_marginLeft="50dp"
		        android:layout_marginRight="50dp"
		        android:layout_marginTop="10dp"
		        android:layout_width="match_parent"
		        android:layout_height="50dp"
		        android:background="@drawable/button_click"
		        android:text="@string/btntext_recharge"
		        android:id="@+id/btn_recharge_alipay"
		         android:textSize="25sp"
		         android:textColor="#FFFFFFFF"
		         android:onClick="btn_recharge_in_alipay"
		        />
		    
        </LinearLayout>
    

</LinearLayout>
