<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/qst_backmap"
    android:orientation="vertical" >

    
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="20dp"
        android:background="#FFFF760D"
        android:baselineAligned="false"
        android:orientation="horizontal"  >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_weight="1" >
            
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dip"
	            android:textColor="#FFFFFFFF"
	            android:textStyle="bold"
	            android:text="@string/choose_post_msg_mode"
	            android:textSize="16sp"/>
		</RelativeLayout>
          
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal" >
	        
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/qst_btn_back"
                android:contentDescription="@string/login_image_des"
                android:onClick="btn_back_onClick" />
            
		</LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="5dip"
        android:background="#10000000" >
    </LinearLayout>
    

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

    
		    <Button 
		        android:layout_marginTop="50dp"
		        android:layout_marginLeft="50dp"
		        android:layout_marginRight="50dp"
		        android:layout_width="match_parent"
		        android:layout_height="70dp"
		        android:background="@drawable/button_click"
		        android:text="@string/sendmsg_by_amount"
		        android:id="@+id/btnModeA"
		         android:textSize="25sp"
		         android:textColor="#FFFFFFFF"
		        />
		    
		    <Button 
		        android:layout_marginTop="50dp"
		        android:layout_marginLeft="50dp"
		        android:layout_marginRight="50dp"
		        android:layout_width="match_parent"
		        android:layout_height="70dp"
		        android:background="@drawable/button_click"
		        android:text="@string/sendmsg_by_group"
		        android:id="@+id/btnModeB"
		         android:textSize="25sp"
		         android:textColor="#FFFFFFFF"
		        />
    
     </LinearLayout>

</LinearLayout>
