<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/qst_backmap"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="20dp"
        android:background="#FFFF760D"
        android:baselineAligned="false"
        android:orientation="horizontal"  >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_weight="1" >
            
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dip"
	            android:textColor="#FFFFFFFF"
	            android:textStyle="bold"
	            android:text="@string/choose_customer"
	            android:textSize="16sp"/>
		</RelativeLayout>
          
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal" >
	        
                <Button 
			        android:layout_marginRight="10dip"
			        android:layout_width="wrap_content"
			        android:layout_height="match_parent"
			        android:background="@drawable/button_click"
			        android:text="@string/cancel"
			        android:id="@+id/btnCancel"
			        android:onClick="btnCancelOnClick"
			        />
    
			    <Button 
			        android:layout_marginRight="10dip"
			        android:layout_width="wrap_content"
			        android:layout_height="match_parent"
			        android:background="@drawable/button_click"
			        android:text="@string/complete"
			        android:id="@+id/btnComplete"
			        android:onClick="btnCompleteOnClick"
			        />
		</LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="5dip"
        android:background="#10000000" >
    </LinearLayout>

    <!-- 
    android:groupIndicator		组的图标 
    android:cacheColorHint		可以去除拖动view时背景变成黑色的效果
    android:listSelector		可以去除选中时的黄色底色
    -->
                <ExpandableListView
				        android:id="@+id/customer_list"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_weight="1"
				        android:cacheColorHint="#00000000"
				        android:childDivider="#00000000"
				        android:divider="#00000000"
				        android:groupIndicator="@null"
				        android:listSelector="#00000000"
				        android:background="#5DFFFFFF"
				        android:layout_marginLeft="15dp"
				        android:layout_marginRight="15dp"
				        android:layout_marginBottom="20dp"
				        android:dividerHeight="2dp"
				        android:scrollbars="none" >
				 </ExpandableListView>

</LinearLayout>
